--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,6 +13,11 @@
 <div>
   <img src="http://grist.files.wordpress.com/2014/05/broad-city-dancing.gif?w=660&h=365">
 </div>
+<br>
+</br>
+<div>
+  <em>Broad city is the greatest show ever made.</em>
+</div>
 </center>
 </body>
 </html>
