Modified templates to display posts from database.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -18,6 +18,13 @@
 <div>
   <em>Broad city is the greatest show ever made.</em>
 </div>
+  {% for post in posts %}
+  <div>
+    <p>published: {{ post.published_date }}</p>
+    <h1><a href=""{{ post.title }}</a></h1>
+    <p>{{ post.text|linebreaks }}</p>
+  </div>
+  {% endfor %}
 </center>
 </body>
 </html>
