--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,30 +1,12 @@
-<html>
-  <head>
-      <title>Shannon's Django Blog</title>
-  </head>
-  <body>
-    <center>
-    <div>
-  <h1><strong>Yas Queen</strong></h1>
-
-</div>
-<br>
-</br>
-<div>
-  <img src="http://grist.files.wordpress.com/2014/05/broad-city-dancing.gif?w=660&h=365">
-</div>
-<br>
-</br>
-<div>
-  <em>Broad city is the greatest show ever made.</em>
-</div>
-  {% for post in posts %}
-  <div>
-    <p>published: {{ post.published_date }}</p>
-    <h1><a href="">{{ post.title }}</a></h1>
-    <p>{{ post.text|linebreaks }}</p>
-  </div>
-  {% endfor %}
-</center>
-</body>
-</html>
+{% extends 'blog/base.html' %}
+{% block content %}
+      {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        <p>published: {{ post.published_date }}</p>
+                    </div>
+                    <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                    <p>{{ post.text|linebreaks }}</p>
+                </div>
+            {% endfor %}
+      {% endblock %}
